--- a/templates/scss/style_content.scss
+++ b/templates/scss/style_content.scss
@@ -53,11 +53,12 @@ body {
 
                     .comment {
                         background-color: #ececec0e;
-                        height: 22vh;
+                        height: auto;
                         border-radius: 18px;
-                        margin: 10px;
+                        margin: 12px;
                         padding: 3px;
                         box-shadow: 0px 1px 3px 0px #00000012;
+                        
 
                         p {
                             font-weight: 300;
@@ -70,7 +71,8 @@ body {
                             flex-direction: row;
                             flex-wrap: wrap;
                             justify-content: flex-start;
-                            margin-left: 10px;
+                            margin: 26px 12px 10px 12px;
+                            line-break: anywhere;
 
                             h2 {
                                 font-weight: 390;
@@ -88,6 +90,19 @@ body {
                             flex-wrap: wrap;
                             align-content: flex-end;
                             margin-right: 22px;
+                            margin-bottom: 8px;
+
+                            p {
+
+                                i {
+                                    font-size: 15px;
+                                    margin-right: 3px;
+                                }
+                            }
+
+                            .autor {
+                                margin-bottom: 2px;
+                            }
                         }
 
                     }
