--- a/templates/scss/style_index.scss
+++ b/templates/scss/style_index.scss
@@ -23,14 +23,6 @@ body {
     position: fixed;
     top: 0;
     padding: 0 auto;
-    
-        h2 {
-            margin: 40px;
-            font-size: auto;
-            height: auto;
-            width: auto;
-
-        }
 
         .header_right {
             padding-right: 30px;
@@ -131,6 +123,30 @@ body {
 
             }
 
+        }
+
+        .logo {
+            display: flex;
+            flex-direction: row;
+            height: 9vh;
+            width: auto;
+            justify-content: flex-end;
+            margin: 0px auto;
+            padding: 0 auto;
+            flex-wrap: wrap;
+            align-items: center;
+            align-content: center;
+            cursor: pointer;
+
+            img {
+                height: 19vh;
+                width: 19vh;
+                margin-top: 2vh;
+            }
+
+            h2 {
+                margin-left: -5vh;
+            }
         }
 
         .header_middle {
