--- a/templates/html/login.html
+++ b/templates/html/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="templates/css/style.css">
     <link rel="stylesheet" href="templates/css/style_index.css">
     <link rel="stylesheet" href="templates/css/style_theme.css">
+    <link rel="icon" href="/templates/image/logo/logoBO.jpg">
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
     <title>Forum</title>
 </head>
@@ -22,7 +23,7 @@
     </div>
     <div class="header_right">
         <div class="login">
-          <a href="/login"><strong>Connection</strong></a>
+          <a href="/login">Connection</a>
         </div>
     </div>
   </div>
