--- a/templates/css/style_modify_content.css
+++ b/templates/css/style_modify_content.css
@@ -1,6 +1,3 @@
-body {
-  overflow: hidden;
-}
 body form {
   background-color: var(--ony);
   opacity: 0.98;
@@ -11,14 +8,8 @@ body form {
   justify-content: space-evenly;
   margin: 15vh auto;
   padding: 16vh 10vh 20vh 10vh;
-  overflow: hidden;
-}
-body h1 {
-  display: flex;
-  flex-direction: column;
-  height: auto;
-  width: auto;
-  padding: 15px;
+  z-index: -1;
+  position: relative;
 }
 body .inputs {
   display: flex;
@@ -57,7 +48,7 @@ body .avatar {
   border: none;
   font-size: 15px;
   color: rgba(255, 255, 255, 0.7647058824);
-  background-color: rgba(37, 175, 2, 0.699);
+  background-color: rgba(236, 236, 236, 0.0745098039);
   outline: none;
   cursor: pointer;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
