--- a/templates/html/writePost.html
+++ b/templates/html/writePost.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="templates/css/style_scrollbar.css">
     <link rel="stylesheet" href="templates/css/style_writePost.css">
     <link rel="stylesheet" href="templates/css/style_theme.css">
+    <link rel="icon" href="/templates/image/logo/logoBO.jpg">
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
     <title>Forum</title>
 </head>
 <body>
@@ -26,10 +28,11 @@
             </div>
         {{ else }}
             <div class="logout">
-                <a href="/logout">Logout</a>
+                <a href="/logout"><i class='bx bx-power-off'></i></a>
             </div>
             <div class="profil">
-                <a href="/profile"><img src="/templates/image/profil.jpg"></a>
+                <a href="/profile"><img src="{{ .User.Avatar }}"></a>
+                <p>{{ .User.Username }}</p>
             </div>
         {{ end }}
     </div>
