--- a/templates/scss/style_modify_content.scss
+++ b/templates/scss/style_modify_content.scss
@@ -1,5 +1,4 @@
 body {
-    overflow: hidden;
 
     form {
         background-color: var(--ony);
@@ -11,15 +10,8 @@ body {
         justify-content: space-evenly;
         margin: 15vh auto;
         padding: 16vh 10vh 20vh 10vh;
-        overflow: hidden;
-    }
-
-    h1 {
-        display: flex;
-        flex-direction: column;
-        height: auto;
-        width: auto;
-        padding: 15px;
+        z-index: -1;
+        position: relative;
     }
 
     .inputs {
@@ -28,7 +20,7 @@ body {
         margin-top: 14px;
         height: auto;
         width: auto;
-
+        
 
         input[type="text"] {
             padding: 11px;
@@ -65,7 +57,7 @@ body {
         border: none;
         font-size: 15px;
         color: #ffffffc3;
-        background-color: rgba(37, 175, 2, 0.699);
+        background-color: #ececec13;
         outline: none;
         cursor: pointer;
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
