--- a/templates/scss/style_profile.scss
+++ b/templates/scss/style_profile.scss
@@ -1,181 +1,147 @@
-body{
+body {
+    height: 100%;
+    width: 100%;
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
-    align-items: center;
     flex-direction: column;
-    height: auto;
-    width: auto;
+    align-content: center;
+    overflow-y: scroll;
 
-    .user {
-        background-color: #36393d8d;
-        margin-top: 15vh;
+    .UserProfile {
+        height: 100%;
+        width: 100%;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        height: 80vh;
-        justify-content: center;
-        flex-wrap: nowrap;
-        width: 92vw;
+        flex-wrap: wrap;
+        align-content: center;
 
-
-        .information {
-
+        .contentAll {
+            margin-top: 14vh;
+            height: 40vw;
+            width: 55vw;
+            background-color: #36393d83;
+            overflow-y: auto;
             display: flex;
-            flex-direction: row;
-            align-items: center;
-            height: 70vh;
-            justify-content: center;
+            flex-direction: column;
             flex-wrap: nowrap;
-            width: 92vw;
-            border-bottom: 2px solid rgba(255,255,255,0.1);
+            align-items: center;
 
-            .leftbox{
+            .contentTop {
+                margin-top: 3vh;
                 display: flex;
-                width: 70vh;
-                height: 50vh;
-                display: flex;
-                align-items: center;
                 flex-direction: column;
-                justify-content: center;
-                
-                img{
-                    width: 30vh;
-                    height: 30vh;
-                    border-radius: 50%;
-                    border: 1px solid rgba(255,255,255,0.1);
+                width: 100%;
+                height: 20vh;
+                flex-wrap: nowrap;
+                align-items: center;
+
+                .Banner {
+                    width: 90%;
+                    height: 90%;
+                    background-color: #fe5526d5;
+                    border-radius: 20px;
                 }
-                .name{
+    
+                .Avatar {
+                    width: 30%;
+                    height: 30%;
+                    display: flex;
+                    align-items: center;
+                    margin-right: 30vh;
+    
+                    img {
+                        height: 12vh;
+                        width: 12vh;
+                        border-radius: 15px;
+                        margin-bottom: 3vh;
+                    }
+    
+                    p {
+                        font-weight: 400;
+                        font-size: 18px;
+                        margin-left: 3vh;
+                    }
+                }
+            }
+
+            .modify {
+                margin-top: 3vh;
+                display: flex;
+                align-items: baseline;
+                float: left;
+                                    
+                i {
+                    color: #fe5526e6;
+                    font-size: 18px;
+                }
+
+                a {
+                    color: #fe5526e6;
+                    font-weight: 330;
+                    font-style: italic;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: flex-end;
+                }
+
+                &:hover {
+
+                    a {
+                        color: #fe5526;
+                    }
+
+                    i {
+                        color: #fe5526;
+                    }
+                }
+
+            }
+    
+            .contentBot{
+                display: flex;
+                justify-content: center;
+                width: 100%;
+                
+                .information {
+                    height: 100%;
+                    width: 70%;
+                    margin-top: 3vh;
                     display: flex;
                     flex-direction: column;
-                    margin-left: 10px;
-                    color: white;
-                    font-size: 20px;
-                    font-weight: 600;
-                    text-align: center;
+                    flex-wrap: wrap;
                     justify-content: center;
-                    align-items: center;
-                }
-            }
+                    align-content: center;
+                    width: 100%;  
+                    height: 100%;  
+                    object-fit: cover;
+                    display: grid;
+                    grid-template-columns: 35% 65%;
+                    justify-items: center;
+                    grid-template-rows: max-content;
+                    line-height: 5em;
+                    border-top: 1px solid #ececec12;
 
-            .rightbox{
-                width: 60vh;
-                height: 50vh;
-                display: flex;
-                justify-content: center;
-                flex-direction: column;
-                
-
-
-                h2{
-                    background-color: gray;
-                    margin: 10px auto;
-                    color: white;
-                    font-size: 20px;
-                    font-weight: 600;
-                    text-align: center;
-                    justify-content: center;
-                    align-items: center;
-                    border: 2px solid rgba(255,255,255,0.1);
-                    box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
-
-                }
-                input.btn{
-                    display: flex;
-                    float: left;
-                    height: 5vh;
-                    width: 20vh;
-                    border-radius: 5px;
-                    border:none;
-                    font-size: 15px;
-                    color: #ffffffc3;
-                    background-color: #fe5526cf;
-                    outline:none;
-                    cursor:pointer;
-                    box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
-                    margin: 20px auto;
-                    justify-content: center;
-                    align-items: center;
-    
-                    &:hover {
-                        background-color: #fe5526;
-                    }
-                }
-            }
-        } 
-        .mdp{
-            opacity: 0.98;
-            display: flex;
-            flex-direction: row; 
-
-            h2{
-
-                margin-top: 25px;
-                color: white;
-                font-size: 20px;
-                font-weight: 600;
-                text-align: center;
-                justify-content: center;
-                align-items: center;
-
-            }
-
-            .inputs {
-                display: flex;
-                flex-direction: row;
-                height: auto;
-                width: auto;
-                margin-top: 14px;
-                margin-left: 10px;
-                border-spacing: 5px;
-                padding: auto 10px;
-
-                input[type="password"] {
-                    padding: 15px;
-                    border:none;
-                    border-radius: 5px;
-                    background-color: #bfbebd1d;
-                    outline:none;
-                    margin-bottom: 1.4vw;
-                    opacity: 0.5;
-                    box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
-
-                    &::placeholder {
-                        color: var(--silv);
-                        padding: 10px;
+                    .info {
+                        font-weight: 300;
+                        font-size: 18px;
                     }
 
-                    &:hover {
-                        box-shadow: 0 0 0.2px 0 #000000;
-                        background-color: #ececec6b;
-    
-                        &::placeholder {
-                            color: var(--gre);
+                    .textInfo {
+                        font-weight: 350;
+                        font-size: 20px;
+
+                        p {
+                            color: #fe5526ce;
                         }
 
                     }
+
                 }
+
             }
 
-            button {
-                height: 6vh;
-                width: 18vh;
-                border-radius: 5px;
-                margin: 15px auto;
-                border:none;
-                font-size: 15px;
-                color: #ffffffc3;
-                background-color: rgba(37, 175, 2, 0.699);
-                outline:none;
-                cursor:pointer;
-                box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
-                justify-content: center;
-
-                &:hover {
-                    background-color: rgba(37, 175, 2, 0.855);
-                }
-            }
         }
-    } 
-}
+        
+    }
 
+}
