--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -51,7 +51,15 @@
             <div class="hi">
                 <p>Hello {{ .User.Username }}</p>
             </div>
-            <div class="new_discution"><a href="/write"><i class='bx bxs-conversation'></i>New post</a></div>
+            <div class="new_discution">
+                <a href="/write">
+                    <i class='bx bxs-conversation'></i>
+                    New post
+                </a>
+            </div>
+            <div>
+                <a href="/category">New Category</a>
+            </div>
         {{ end }}
     </div>
     <div class="content_bot">
